--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:label="@string/app_name"
+            android:label="@string/PDPE_Feedback1"
             android:theme="@style/Theme.PDPE_Feedback1">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
